[package]
name = "demo-main"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
once_cell = "1.20"
pprof = "0.5"
hyperlight_host = { path = "../../hyperlight/src/hyperlight_host" }
hyperlight_testing = { path = "../../hyperlight/src/hyperlight_testing" }
hyperlight_common = { path = "../../hyperlight/src/hyperlight_common" }